--- a/src/main/resources/templates/feed/readpage.html
+++ b/src/main/resources/templates/feed/readpage.html
@@ -81,18 +81,18 @@
     </header>
 
     <main>
-        
+
         <div class="sub_menu">
             <div class="sub_container">
                 <ul class="sub_list">
                     <li>
-                        <button>포스트</button>
+                        <a th:href="@{/feed}" class="">포스트</a>
                     </li>
                     <li>
-                        <button>한 줄 리뷰</button>
+                        <a th:href="@{/feed/oneline}" class="">한 줄 리뷰</a>
                     </li>
                     <li>
-                        <button>독후감</button>
+                        <a th:href="@{/feed/read}" class="">독후감</a>
                     </li>
                 </ul>
             </div>
