--- a/src/main/resources/templates/main/mainpage.html
+++ b/src/main/resources/templates/main/mainpage.html
@@ -148,181 +148,122 @@
               <a th:href="@{/book/info}">
               <h3 class="hipppo_ranking_title">히포 랭킹</h3>
               </a>
-              <div class="hipppo_ranking_content">
-                        <div class="ranking_content1">
-                          <div class="rank_num1">
-                          </div>
-                          <div class="thumbnail">
-                            <div class="book_picture">
+              <section class="ranking_border_box">
+                  <div class="ranking_content">
+                      <div class="rank_num"></div>
+                      <div class="thumbnail">
+                          <div class="book_picture">
                               <picture>
-                                <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
+                                  <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
                               </picture>
-                            </div>
                           </div>
-                          <div class="thumbnail_title">
-                            <a href="" class="book_data">
+                      </div>
+                      <div class="thumbnail_title">
+                          <a href="" class="book_data">
                               <div class="book_content">
-                                <p class="rank_book_title">제목제목</p>
-                                <p class="rank_book_author">지은이지은이</p>
+                                  <p class="rank_book_title">제목제목</p>
+                                  <p class="rank_book_author">지은이지은이</p>
                               </div>
-                            </a>
+                          </a>
+                      </div>
+                  </div>
+                  <div class="ranking_content">
+                      <div class="rank_num"></div>
+                      <div class="thumbnail">
+                          <div class="book_picture">
+                              <picture>
+                                  <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
+                              </picture>
                           </div>
+                      </div>
+                      <div class="thumbnail_title">
+                          <a href="" class="book_data">
+                              <div class="book_content">
+                                  <p class="rank_book_title">제목제목</p>
+                                  <p class="rank_book_author">지은이지은이</p>
+                              </div>
+                          </a>
+                      </div>
+                  </div>
+                  <div class="ranking_content">
+                      <div class="rank_num"></div>
+                      <div class="thumbnail">
+                          <div class="book_picture">
+                              <picture>
+                                  <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
+                              </picture>
+                          </div>
+                      </div>
+                      <div class="thumbnail_title">
+                          <a href="" class="book_data">
+                              <div class="book_content">
+                                  <p class="rank_book_title">제목제목</p>
+                                  <p class="rank_book_author">지은이지은이</p>
+                              </div>
+                          </a>
+                      </div>
+                  </div>
+              </section>
+                <section class="ranking_border_box">
+                    <div class="ranking_content">
+                        <div class="rank_num"></div>
+                        <div class="thumbnail">
+                            <div class="book_picture">
+                                <picture>
+                                    <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
+                                </picture>
+                            </div>
                         </div>
+                        <div class="thumbnail_title">
+                            <a href="" class="book_data">
+                                <div class="book_content">
+                                    <p class="rank_book_title">제목제목</p>
+                                    <p class="rank_book_author">지은이지은이</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="ranking_content">
+                        <div class="rank_num"></div>
+                        <div class="thumbnail">
+                            <div class="book_picture">
+                                <picture>
+                                    <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="thumbnail_title">
+                            <a href="" class="book_data">
+                                <div class="book_content">
+                                    <p class="rank_book_title">제목제목</p>
+                                    <p class="rank_book_author">지은이지은이</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="ranking_content">
+                        <div class="rank_num"></div>
+                        <div class="thumbnail">
+                            <div class="book_picture">
+                                <picture>
+                                    <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="thumbnail_title">
+                            <a href="" class="book_data">
+                                <div class="book_content">
+                                    <p class="rank_book_title">제목제목</p>
+                                    <p class="rank_book_author">지은이지은이</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </section>
 
-                        <div class="ranking_content1">
-                          <div class="rank_num2">
-                          </div>
-                          <div class="thumbnail">
-                            <div class="book_picture">
-                              <picture>
-                                <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
-                              </picture>
-                            </div>
-                          </div>
-                          <div class="thumbnail_title">
-                            <a href="" class="book_data">
-                              <div class="book_content">
-                                <p class="rank_book_title">제목제목</p>
-                                <p class="rank_book_author">지은이지은이</p>
-                              </div>
-                            </a>
-                          </div>
-                        </div>
 
-                        <div class="ranking_content1">
-                          <div class="rank_num3">
-                          </div>
-                          <div class="thumbnail">
-                            <div class="book_picture">
-                              <picture>
-                                <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
-                              </picture>
-                            </div>
-                          </div>
-                          <div class="thumbnail_title">
-                            <a href="" class="book_data">
-                              <div class="book_content">
-                                <p class="rank_book_title">제목제목</p>
-                                <p class="rank_book_author">지은이지은이</p>
-                              </div>
-                            </a>
-                          </div>
-                        </div>
-                        <div class="ranking_content2">
-                          <div class="rank_num4">
-                          </div>
-                          <div class="thumbnail">
-                            <div class="book_picture">
-                              <picture>
-                                <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
-                              </picture>
-                            </div>
-                          </div>
-                          <div class="thumbnail_title">
-                            <a href="" class="book_data">
-                              <div class="book_content">
-                                <p class="rank_book_title">제목제목</p>
-                                <p class="rank_book_author">지은이지은이</p>
-                              </div>
-                            </a>
-                          </div>
-                        </div>
-                        <div class="ranking_content2">
-                          <div class="rank_num5">
-                          </div>
-                          <div class="thumbnail">
-                            <div class="book_picture">
-                              <picture>
-                                <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
-                              </picture>
-                            </div>
-                          </div>
-                          <div class="thumbnail_title">
-                            <a href="" class="book_data">
-                              <div class="book_content">
-                                <p class="rank_book_title">제목제목</p>
-                                <p class="rank_book_author">지은이지은이</p>
-                              </div>
-                            </a>
-                          </div>
-                        </div>
-                        <div class="ranking_content2">
-                          <div class="rank_num6">
-                          </div>
-                          <div class="thumbnail">
-                            <div class="book_picture">
-                              <picture>
-                                <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
-                              </picture>
-                            </div>
-                          </div>
-                          <div class="thumbnail_title">
-                            <a href="" class="book_data">
-                              <div class="book_content">
-                                <p class="rank_book_title">제목제목</p>
-                                <p class="rank_book_author">지은이지은이</p>
-                              </div>
-                            </a>
-                          </div>
-                        </div>
-                        <div class="ranking_content3">
-                          <div class="rank_num7">
-                          </div>
-                          <div class="thumbnail">
-                            <div class="book_picture">
-                              <picture>
-                                <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
-                              </picture>
-                            </div>
-                          </div>
-                          <div class="thumbnail_title">
-                            <a href="" class="book_data">
-                              <div class="book_content">
-                                <p class="rank_book_title">제목제목</p>
-                                <p class="rank_book_author">지은이지은이</p>
-                              </div>
-                            </a>
-                          </div>
-                        </div>
-                        <div class="ranking_content3">
-                          <div class="rank_num8">
-                          </div>
-                          <div class="thumbnail">
-                            <div class="book_picture">
-                              <picture>
-                                <img th:src="@{/images/main/ranking_thumbnail.png}" alt="">
-                              </picture>
-                            </div>
-                          </div>
-                          <div class="thumbnail_title">
-                            <a href="" class="book_data">
-                              <div class="book_content">
-                                <p class="rank_book_title">제목제목</p>
-                                <p class="rank_book_author">지은이지은이</p>
-                              </div>
-                            </a>
-                          </div>
-                        </div> 
-                        <div class="ranking_content3">
-                          <div class="rank_num9">
-                          </div>
-                          <div class="thumbnail">
-                            <div class="book_picture">
-                              <picture>
-                                <img th:src="@{/images/main/ranking_thumbnail.png}" alt=""> 
-                              </picture>
-                            </div>
-                          </div>
-                          <div class="thumbnail_title">
-                            <a href="" class="book_data">
-                              <div class="book_content">
-                                <p class="rank_book_title">제목제목</p>
-                                <p class="rank_book_author">지은이지은이</p>
-                              </div>
-                            </a>
-                          </div>
-                        </div>                  
-              </div>
+
+
             </div>
           </section>
         </div>
@@ -485,7 +426,7 @@
           </section>
         </div>
       </div>
-    </div>  
+    </div>
     </main>
     <footer>
       <div class="footer_inner">
