TBL_JOIN , TBL_PHONEINFO 테이블 삭제 및 HTML Register 합치기

--- a/src/main/resources/templates/user/phone_info_code.html
+++ b/src/main/resources/templates/user/phone_info_code.html
@@ -48,7 +48,7 @@
 <!--                </p>-->
                 <div data-b-1130 class="button-area mt16">
                     <button data-b-1130 type="button" disabled="disabled" class="next-button mds-button mds-button--primary mds-button--h56 mds-button--r4">
-                        <a th:href="@{/user/idpassword}">다음</a>
+                        <a th:href="@{/user/register}">다음</a>
                     </button>
                 </div>
             </div>
